# girlsleadingtech

./: README.md  bun.lockb  package-lock.json  package.json  vercel.json  vite.config.ts
api/: chat.js  chat.ts  index.js
chatbot_service/: config.py  llm_router.py  main.py  pyproject.toml  requirements.txt  retriver.py
src/: routeTree.gen.ts  styles.css
src/components/: Chatbot.d.ts  Chatbot.jsx  FeedbackButton.tsx
src/components/characters/: BuilderCard.tsx  CharacterStack.tsx  ConnectorCard.tsx  DesignerCard.tsx  OrganizerCard.tsx
src/components/home/: CollegesReachedSection.tsx  OurJourney.tsx  hero.tsx  (+5 more)
src/data/: colleges.ts  community.ts  curated-resources.ts  events-real.ts  hackathons.ts  initiatives.ts  partners.ts  resources.ts  role-models.ts  scholarships.ts  searchIndex.ts  socials.ts  types.ts
src/hooks/: use-hydrated.ts
src/lib/: chat-server.js  chat-server.ts  event-helpers.ts  excel.js
src/routes/: __root.tsx  about.tsx  contact.tsx  events.$eventId.tsx  events.ongoing.tsx  events.past.tsx  events.tsx  events.upcoming.tsx  humans.tsx  impact.tsx  index.tsx  initiatives.$slug.tsx  initiatives.tsx  join.tsx  mentor.tsx  partner.tsx  partners.tsx  resources.articles.tsx  resources.books.tsx  resources.certifications.tsx  resources.communities.tsx  resources.courses.tsx  resources.hackathons.tsx  resources.index.tsx  resources.interview-prep.tsx  resources.people.tsx  resources.programs.tsx  resources.roadmaps.tsx  resources.role-models.tsx  resources.scholarships.tsx  resources.tools.tsx  resources.videos.tsx  secret-admin.tsx  volunteer.tsx
(+26 files in other folders)
