[project]
name = "chatbot-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pinecone>=5.0.1",
    "sentence-transformers>=3.1.0",
    "pypdf>=4.3.1",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "langchain-text-splitters>=0.3.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "google-generativeai>=0.8.5",
    "groq>=0.37.1",
]
